@@ -21,23 +21,44 @@ import com.ibm.wala.util.NullProgressMonitor;
 import com.ibm.wala.util.collections.HashSetFactory;
 import java.io.File;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.util.Set;
 
 public class Driver {
 
   static {
     try {
-      Class<?> j3 = Class.forName("com.ibm.wala.cast.python.loader.Python3LoaderFactory");
-      PythonAnalysisEngine.setLoaderFactory((Class<? extends PythonLoaderFactory>) j3);
+      @SuppressWarnings("unchecked")
+      Class<? extends PythonLoaderFactory> j3 =
+          (Class<? extends PythonLoaderFactory>)
+              Class.forName("com.ibm.wala.cast.python.loader.Python3LoaderFactory");
+      PythonAnalysisEngine.setLoaderFactory(j3);
       Class<?> i3 = Class.forName("com.ibm.wala.cast.python.util.Python3Interpreter");
-      PythonInterpreter.setInterpreter((PythonInterpreter) i3.newInstance());
-    } catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
+      PythonInterpreter.setInterpreter(
+          (PythonInterpreter) i3.getDeclaredConstructor().newInstance());
+    } catch (ClassNotFoundException
+        | InstantiationException
+        | IllegalAccessException
+        | IllegalArgumentException
+        | InvocationTargetException
+        | NoSuchMethodException
+        | SecurityException e) {
       try {
-        Class<?> j2 = Class.forName("com.ibm.wala.cast.python.loader.Python2LoaderFactory");
-        PythonAnalysisEngine.setLoaderFactory((Class<? extends PythonLoaderFactory>) j2);
+        @SuppressWarnings("unchecked")
+        Class<? extends PythonLoaderFactory> j2 =
+            (Class<? extends PythonLoaderFactory>)
+                Class.forName("com.ibm.wala.cast.python.loader.Python2LoaderFactory");
+        PythonAnalysisEngine.setLoaderFactory(j2);
         Class<?> i2 = Class.forName("com.ibm.wala.cast.python.util.Python2Interpreter");
-        PythonInterpreter.setInterpreter((PythonInterpreter) i2.newInstance());
-      } catch (ClassNotFoundException | InstantiationException | IllegalAccessException e1) {
+        PythonInterpreter.setInterpreter(
+            (PythonInterpreter) i2.getDeclaredConstructor().newInstance());
+      } catch (ClassNotFoundException
+          | InstantiationException
+          | IllegalAccessException
+          | IllegalArgumentException
+          | InvocationTargetException
+          | NoSuchMethodException
+          | SecurityException e1) {
         assert false : e.getMessage() + ", then " + e1.getMessage();
       }
     }
@@ -65,7 +86,7 @@ public class Driver {
     @SuppressWarnings("unchecked")
     PointerAnalysis<InstanceKey> PA = (PointerAnalysis<InstanceKey>) builder.getPointerAnalysis();
 
-    CAstCallGraphUtil.AVOID_DUMP = false;
+    CAstCallGraphUtil.AVOID_DUMP.set(false);
     CAstCallGraphUtil.dumpCG(
         ((SSAPropagationCallGraphBuilder) builder).getCFAContextInterpreter(), PA, CG);
 
